# mibuto

./: CONTRIBUTING.md  LICENSE
BACKEND/: CONTRIBUTING.md  pyproject.toml  start_backend.sh  tests.sh
BACKEND/flask_api/: __init__.py  commands.py  config.py  extensions.py  models.py
BACKEND/flask_api/routes/: __init__.py  admin_routes.py  chapter_routes.py  quiz_routes.py  subject_routes.py  user_routes.py
BACKEND/instance/: main.db
BACKEND/schema/: README.md  schema.puml
FRONTEND/: CONTRIBUTING.md  README.md  package-lock.json  package.json
FRONTEND/scripts/: getIP.js
FRONTEND/src/: App.vue  main.js
FRONTEND/src/components/: BottomBar.vue  NavBar.vue  ToastNotification.vue
FRONTEND/src/components/modals/: CreateSubjectModal.vue  modalStyle.css
FRONTEND/src/components/modals/chapters/: CreateChapterModal.vue  DeleteChapterModal.vue  UpdateChapterModal.vue
FRONTEND/src/components/modals/quizzes/: CreateQuizModal.vue  DeleteQuizModal.vue  UpdateQuizModal.vue
FRONTEND/src/components/modals/subjects/: CreateSubjectModal.vue  DeleteSubjectModal.vue  UpdateSubjectModal.vue  someModal.vue
FRONTEND/src/router/: router.js
FRONTEND/src/services/: event_services.js
FRONTEND/src/store/: index.js
FRONTEND/src/store/modules/: chapters.js  quizzes.js  subjects.js  user_auth.js
FRONTEND/src/views/: AdminDashboard.vue  HomePage.vue
FRONTEND/src/views/user/: AdminLogin.vue  User.css  UserLogin.vue  UserSignUp.vue
