[tool.poetry]
name = "mibuto"
version = "0.1.0"
description = "Flask backend for mibuto"
authors = ["ArmanGrewal007 <armansinghgrewal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
faker = "^35.0.0"
flask-cors = "^5.0.0"
flask-bcrypt = "^1.0.1"
flask-mail = "^0.10.0"
loadenv = "^0.1.1"
flask-rbac = "^0.5.0"
flask-login = "^0.6.3"
flask-migrate = "^4.1.0"
flask-security-too = "^5.5.2"
flask-security = "^5.5.2"
flask-jwt-extended = "^4.7.1"
flask-caching = "^2.3.0"
python-dotenv = "^1.0.1"
configparser = "^7.1.0"
celery = "^5.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
